Fixes navigation bar on Firefox

--- a/unb-gama/style.css
+++ b/unb-gama/style.css
@@ -913,7 +913,6 @@ span.publishing-info.has-flags{
 
 #navigation > ul {
   width: 100%;
-  height: 100%;
   padding: 0px;
   white-space: nowrap;
   font-size: 15px;
@@ -966,6 +965,105 @@ span.publishing-info.has-flags{
 #navigation ul li ul li {
   display: block;
   margin: 2px 0px 2px 0px;
+}
+
+#navigation .dropdown-arrow {
+  display: inline-flex;
+  margin: 15px 30px 0 0;
+  padding: 10px;
+}
+
+#navigation .dropdown-arrow a {
+  margin-right: 5px;
+}
+
+#navigation .dropdown-arrow span {
+  padding-left: 0px;
+}
+
+#navigation ul li:hover .dropdown-arrow {
+  background: #009B37;
+  border-radius: 5px;
+  box-shadow: 0 3px 0 #00814D;
+}
+
+#navigation > ul > li > ul > li > a:hover {
+  font-weight: bold;
+}
+
+#navigation ul a {
+  border: none;
+}
+
+#navigation ul a:hover {
+  background: none;
+  border: none;
+}
+
+#navigation ul #home-button {
+  display: inline-flex;
+  margin-right: 80px;
+}
+
+#navigation ul #home-button span {
+  padding: 0 5px 0 0;
+  color: #00D869;
+}
+
+#navigation ul li #news,
+#navigation ul li #pos-graduation,
+#navigation ul li #labs,
+#navigation ul li #info,
+#navigation ul li #learn-more,
+#navigation ul li #startups {
+  margin-top: 15px;
+  z-index: 10;
+}
+
+.navigation-dropdown-list li a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+
+#pos-graduation.navigation-dropdown-list,
+#info.navigation-dropdown-list,
+#labs.navigation-dropdown-list,
+#news.navigation-dropdown-list,
+#learn-more.navigation-dropdown-list,
+#startups.navigation-dropdown-list,
+#info.navigation-dropdown-list {
+  background: #00814D;
+  min-width: 200px;
+  margin-left: 0px;
+  border-radius: 5px;
+  border: 0px;
+  padding-top: 5px;
+}
+
+#pos-graduation.navigation-dropdown-list li,
+#info.navigation-dropdown-list li,
+#labs.navigation-dropdown-list li,
+#news.navigation-dropdown-list li,
+#learn-more.navigation-dropdown-list li,
+#startups.navigation-dropdown-list li,
+#info.navigation-dropdown-list li{
+  background: #009B37;
+  padding-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 5px;
+  min-width: 190px;
+  border-radius: 5px;
+}
+
+#pos-graduation.navigation-dropdown-list li a,
+#info.navigation-dropdown-list li a,
+#labs.navigation-dropdown-list li a,
+#news.navigation-dropdown-list li a,
+#learn-more.navigation-dropdown-list li a,
+#startups.navigation-dropdown-list li a,
+#info.navigation-dropdown-list li a{
+  color: white;
 }
 
 #startups > li > a {
@@ -1039,29 +1137,7 @@ span.publishing-info.has-flags{
   margin-top: 12px;
 }
 
-.dropdown-arrow {
-  display: flex;
-  height: 33px;
-  margin-top: 15px;
-  margin-right: 30px;
-  padding: 10px;
-  height: 25px;
-  padding-bottom: 0px;
-}
 
-.dropdown-arrow a {
-  margin-right: 5px;
-}
-
-.dropdown-arrow span {
-  padding-left: 0px !important;
-}
-
-#navigation ul li:hover .dropdown-arrow {
-  background: #009B37;
-  border-bottom: 3px solid #00814D;
-  border-radius: 5px;
-}
 
 #search-results > div.search-results-articles.search-results-box > div > ul {
   padding: 0 15px;
@@ -1152,9 +1228,6 @@ span.publishing-info.has-flags{
   color: #336699;
 }
 
-#navigation > ul > li > ul > li > a:hover {
-  font-weight: bold;
-}
 
 .search-results-articles.search-results-box {
   margin-bottom: 10px;
@@ -1209,16 +1282,6 @@ span.publishing-info.has-flags{
   display: block;
 }
 
-
-#navigation ul a {
-  border: none;
-}
-
-#navigation ul a:hover {
-  background: none;
-  border: none;
-}
-
 #profile-button {
   width: 125px;
   background-color: #009B37;
@@ -1254,10 +1317,6 @@ span.publishing-info.has-flags{
 
 #profile-button.pressed .fa {
   font-size: 15px;
-}
-
-.home-link:before {
-  background: url(images/search.png) no-repeat scroll 200px 6px;
 }
 
 #box-3 > div:nth-child(1) > div:nth-child(1) {
@@ -1444,76 +1503,6 @@ span.publishing-info.has-flags{
 
 #profile-header-fga .signup-form a:hover {
   text-decoration: underline;
-}
-
-#navigation ul #home-button {
-  margin-right: 80px;
-}
-
-#navigation ul #home-button span {
-  padding: 0 5px 0 0;
-  color: #00D869;
-}
-
-#navigation ul #home-button a {
-  line-height: 65px;
-  display: block;
-}
-
-#navigation ul li #news,
-#navigation ul li #pos-graduation,
-#navigation ul li #labs,
-#navigation ul li #info,
-#navigation ul li #learn-more,
-#navigation ul li #startups {
-  margin-top: 15px;
-  z-index: 10;
-}
-
-.navigation-dropdown-list li a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-}
-
-#pos-graduation.navigation-dropdown-list,
-#info.navigation-dropdown-list,
-#labs.navigation-dropdown-list,
-#news.navigation-dropdown-list,
-#learn-more.navigation-dropdown-list,
-#startups.navigation-dropdown-list,
-#info.navigation-dropdown-list {
-  background: #00814D;
-  min-width: 200px;
-  margin-left: 0px;
-  border-radius: 5px;
-  border: 0px;
-  padding-top: 5px;
-}
-
-#pos-graduation.navigation-dropdown-list li,
-#info.navigation-dropdown-list li,
-#labs.navigation-dropdown-list li,
-#news.navigation-dropdown-list li,
-#learn-more.navigation-dropdown-list li,
-#startups.navigation-dropdown-list li,
-#info.navigation-dropdown-list li{
-  background: #009B37;
-  padding-bottom: 0px;
-  margin-left: 5px;
-  margin-right: 5px;
-  min-width: 190px;
-  border-radius: 5px;
-}
-
-#pos-graduation.navigation-dropdown-list li a,
-#info.navigation-dropdown-list li a,
-#labs.navigation-dropdown-list li a,
-#news.navigation-dropdown-list li a,
-#learn-more.navigation-dropdown-list li a,
-#startups.navigation-dropdown-list li a,
-#info.navigation-dropdown-list li a{
-  color: white;
 }
 
 #profile-menu-dropdown {
